--- a/chunk_includes/consent.html
+++ b/chunk_includes/consent.html
@@ -4,7 +4,7 @@ exactly'><u>Scopul studiului<o:p></o:p></u></p>
 
 <p class=MsoBodyText style='text-align:justify;line-height:14.0pt;mso-line-height-rule:
 exactly'><span style='font-size:12.0pt;mso-bidi-font-size:10.0pt'>
-În cadrul acestui studiu, Adina Camelia Bleotu, de la Universitatea din București, și Brian Dillon, de la Universitatea din Massachusetts, Amherst, 
+În cadrul acestui studiu, Adina Camelia Bleotu, de la Universitatea din București, și Rodica Ivan, de la Universitatea din Massachusetts, Amherst, 
 investighează procesarea anumitor fenomene gramaticale în limba română. 
   Informațiile colectate în acest studiu vor fi utilizate la pregătirea unor lucrări pentru conferințe și reviste internaționale de lingvistică.
  Sunteți eligibil să participați la acest studiu, deoarece sunteți un vorbitor nativ de română, cu vârsta peste 18 ani.
